--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Segoe UI", sans-serif;
-  background: linear-gradient(135deg, #fe5000, #bd4bf9);
+  background: #000000;
   color: white;
   overflow: hidden;
   display: flex;
@@ -87,7 +87,8 @@ body {
   z-index: 1;
   max-width: 600px;
   padding: 40px;
-  background: #a600ff;
+  background: #000000;
+  border: #ffb608 2px solid;
   border-radius: 20px;
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(10px);
@@ -115,7 +116,7 @@ button {
 }
 
 button:hover {
-  background: #08ff3d;
+  background: #211d49;
   transform: scale(1.05);
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   color: #ffffff;
@@ -124,7 +125,7 @@ button:hover {
 .idea-box {
   margin-top: 30px;
   padding: 25px;
-  background-color: rgb(0, 0, 0, 0.5);
+  background-color: #1a161d;
   border-radius: 12px;
   min-height: 100px;
   display: flex;
@@ -137,6 +138,7 @@ button:hover {
   color: #ffffff;
   line-height: 1.4;
 }
+
 footer {
   position: absolute;
   bottom: 20px;
